compilation.out
Executing the C code of file './material/code-generation-tests/OK_GER06.c'
7 1 2 3 4 5 6 7
7 1 2 3 4 5 6 7 
Error when compiling the C code of file './material/code-generation-tests/OK_GER13.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER13.c: In function ‘_A_set’:
./material/code-generation-tests/OK_GER13.c:53:22: error: lvalue required as left operand of assignment
   53 |     FALTAIMPLEMENTAR = _pn;
      |                      ^
./material/code-generation-tests/OK_GER13.c: At top level:
./material/code-generation-tests/OK_GER13.c:126:5: error: unknown type name ‘_class_Program’
  126 |     _class_Program _program;
      |     ^~~~~~~~~~~~~~
./material/code-generation-tests/OK_GER13.c: In function ‘_Program_run’:
./material/code-generation-tests/OK_GER13.c:179:22: error: lvalue required as left operand of assignment
  179 |     FALTAIMPLEMENTAR = new_Program();
      |                      ^
Executing the C code of file './material/code-generation-tests/OK_GER01.c'
7 0 1 2 3 4 5 6 7
7 0 1 2 3 4 5 6 7 
Executing the C code of file './material/code-generation-tests/OK_GER02.c'
6 1 2 3 4 5 6
6 1 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER03.c'
6 1 2 3 4 5 6
6 1 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER04.c'
61 2 3 4 5 6
61 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER05.c'

Ok-ger05
The output should be what you give as input.
Type in six numbers
Executing the C code of file './material/code-generation-tests/OK_GER07.c'
0
0
Executing the C code of file './material/code-generation-tests/OK_GER08.c'
1 1 2 2 3 3 4 5 6 7
1 1 2 2 3 3 4 5 6 7 
Executing the C code of file './material/code-generation-tests/OK_GER09.c'
1 1 2 2 3 3 4 4
 4 4
 
Error when compiling the C code of file './material/code-generation-tests/OK_GER10.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER10.c: In function ‘_A_m1’:
./material/code-generation-tests/OK_GER10.c:51:22: error: lvalue required as left operand of assignment
   51 |     FALTAIMPLEMENTAR = 1;
      |                      ^
./material/code-generation-tests/OK_GER10.c: In function ‘_B_m2’:
./material/code-generation-tests/OK_GER10.c:79:22: error: lvalue required as left operand of assignment
   79 |     FALTAIMPLEMENTAR = 2;
      |                      ^
Executing the C code of file './material/code-generation-tests/OK_GER11.c'
4 1 2 3 4
4 1 3 
Executing the C code of file './material/code-generation-tests/OK_GER12.c'
1 2 1 2 1 2 1 2
1 2 1 2 
Error when compiling the C code of file './material/code-generation-tests/OK_GER14.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER14.c: In function ‘_A_init’:
./material/code-generation-tests/OK_GER14.c:55:22: error: lvalue required as left operand of assignment
   55 |     FALTAIMPLEMENTAR = 1;
      |                      ^
./material/code-generation-tests/OK_GER14.c: In function ‘_B_init’:
./material/code-generation-tests/OK_GER14.c:83:22: error: lvalue required as left operand of assignment
   83 |     FALTAIMPLEMENTAR = 2;
      |                      ^
./material/code-generation-tests/OK_GER14.c: In function ‘_C_init’:
./material/code-generation-tests/OK_GER14.c:113:22: error: lvalue required as left operand of assignment
  113 |     FALTAIMPLEMENTAR = 3;
      |                      ^
./material/code-generation-tests/OK_GER14.c: In function ‘_D_init’:
./material/code-generation-tests/OK_GER14.c:145:22: error: lvalue required as left operand of assignment
  145 |     FALTAIMPLEMENTAR = 4;
      |                      ^
./material/code-generation-tests/OK_GER14.c: In function ‘_Program_run’:
./material/code-generation-tests/OK_GER14.c:180:25: error: invalid use of void expression
  180 |     printf("%d", (_d->vt[6] )(_d));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER14.c:183:25: error: invalid use of void expression
  183 |     printf("%d", (_c->vt[4] )(_c));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER14.c:186:25: error: invalid use of void expression
  186 |     printf("%d", (_b->vt[2] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER14.c:189:25: error: invalid use of void expression
  189 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
Error when compiling the C code of file './material/code-generation-tests/OK_GER15.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER15.c: In function ‘_A_init_A’:
./material/code-generation-tests/OK_GER15.c:52:22: error: lvalue required as left operand of assignment
   52 |     FALTAIMPLEMENTAR = 1;
      |                      ^
./material/code-generation-tests/OK_GER15.c:53:22: error: lvalue required as left operand of assignment
   53 |     FALTAIMPLEMENTAR = 2;
      |                      ^
./material/code-generation-tests/OK_GER15.c: In function ‘_B_init_B’:
./material/code-generation-tests/OK_GER15.c:108:22: error: lvalue required as left operand of assignment
  108 |     FALTAIMPLEMENTAR = 3;
      |                      ^
./material/code-generation-tests/OK_GER15.c:109:22: error: lvalue required as left operand of assignment
  109 |     FALTAIMPLEMENTAR = 4;
      |                      ^
./material/code-generation-tests/OK_GER15.c: In function ‘_C_init_C’:
./material/code-generation-tests/OK_GER15.c:169:22: error: lvalue required as left operand of assignment
  169 |     FALTAIMPLEMENTAR = 5;
      |                      ^
./material/code-generation-tests/OK_GER15.c:170:22: error: lvalue required as left operand of assignment
  170 |     FALTAIMPLEMENTAR = 6;
      |                      ^
Error when compiling the C code of file './material/code-generation-tests/OK_GER16.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER16.c: In function ‘_A_set’:
./material/code-generation-tests/OK_GER16.c:55:22: error: lvalue required as left operand of assignment
   55 |     FALTAIMPLEMENTAR = _k;
      |                      ^
./material/code-generation-tests/OK_GER16.c: In function ‘_B_init’:
./material/code-generation-tests/OK_GER16.c:94:22: error: lvalue required as left operand of assignment
   94 |     FALTAIMPLEMENTAR = 2;
      |                      ^
./material/code-generation-tests/OK_GER16.c: In function ‘_Program_run’:
./material/code-generation-tests/OK_GER16.c:162:25: error: invalid use of void expression
  162 |     printf("%d", (_b->vt[4] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER16.c:169:25: error: invalid use of void expression
  169 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER16.c:171:25: error: invalid use of void expression
  171 |     printf("%d", (_b->vt[4] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER16.c:174:25: error: invalid use of void expression
  174 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER16.c:177:25: error: invalid use of void expression
  177 |     printf("%d", (_c->vt[4] )(_c));
      |                  ~~~~~~~^~~~~~~~~
Error when compiling the C code of file './material/code-generation-tests/OK_GER21.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER21.c: In function ‘_A_set’:
./material/code-generation-tests/OK_GER21.c:51:22: error: lvalue required as left operand of assignment
   51 |     FALTAIMPLEMENTAR = _n;
      |                      ^
./material/code-generation-tests/OK_GER21.c: In function ‘_Program_set’:
./material/code-generation-tests/OK_GER21.c:91:22: error: lvalue required as left operand of assignment
   91 |     FALTAIMPLEMENTAR = _a;
      |                      ^
Executing the C code of file './material/code-generation-tests/OK_GER22.c'
100
100
Cianeto compiler finished
